--- a/bobSeller/WebContent/WEB-INF/modulos/core/modulos.html
+++ b/bobSeller/WebContent/WEB-INF/modulos/core/modulos.html
@@ -16,6 +16,11 @@
 		<div id="hooks" th:if="${tab} == @{hooks}" >hook</div>
 		<div id="vistas" th:if="${tab} == @{vistas}" >vista</div>
 	</div>
+	
+	[[${BOB_LIST}]]
+	<div th:text= "${BOB_LIST}">
+		Contenidooo
+	</div>
   <input type="submit" name="Oprimir" value="Oprimir">
 </form>
 </div>
