Ajustes plantilla HTML List
Se ajusta la platilla List para HTML

--- a/bobSeller/WebContent/WEB-INF/modulos/core/modulos.html
+++ b/bobSeller/WebContent/WEB-INF/modulos/core/modulos.html
@@ -1,27 +1,1 @@
-<div class="admin">
-<form th:action="${#httpServletRequest.requestURL}" id="formadminmodulo" method="POST">
-	<div class="tabs">
-		<div id="pmodulos" th:class="${tab} == @{modulos} or !${tab} ?tabsSel:tabsIna">
-			<a th:href="${#httpServletRequest.requestURL}+@{?tabs=modulos}" >MODULOS</a>
-		</div>
-		<div id="pmodulos" th:class="${tab} == @{hooks}?tabsSel:tabsIna">
-			<a th:href="${#httpServletRequest.requestURL}+@{?tabs=hooks}" >HOOKS</a>
-		</div>
-		<div id="pmodulos" th:class="${tab} == @{vistas}?tabsSel:tabsIna">
-			<a th:href="${#httpServletRequest.requestURL}+@{?tabs=vistas}" >VISTAS</a>
-		</div>
-	</div>
-	<div class="contenido">
-		<div id="modulos" th:if="${tab} == @{modulos} or !${tab}" >modulos</div>
-		<div id="hooks" th:if="${tab} == @{hooks}" >hook</div>
-		<div id="vistas" th:if="${tab} == @{vistas}" >vista</div>
-	</div>
-
-
-  <input type="submit" name="Oprimir" value="Oprimir">
-</form>
-
-<div th:utext= "${BOB_LIST}">
-	Contenidooo
-</div>
-</div>
+<div class="admin" th:utext= "${BOB_LIST}"></div>
